Add dashboards for Qdrant and System Overview, and configure MCP for Memgraph, MySQL, and Qdrant
- Created a new Qdrant dashboard with various panels for monitoring Qdrant status, vector search activity, collection operations, errors, and logs.
- Added a System Overview dashboard to visualize active databases, admin tools, monitoring stack, system errors, and log activity.
- Configured MCP settings for Memgraph, MySQL, and Qdrant, enabling connections to their respective databases with appropriate commands and arguments.

--- a/grafana-loki/.env.example
+++ b/grafana-loki/.env.example
@@ -1,11 +1,12 @@
 # Grafana-Loki Monitoring Stack Configuration
 # Copy this file to .env and customize as needed
 
-# Ports (97xx range for Monitoring)
-# To change environment (dev/test/staging), modify first 2 digits:
-# Dev: 97xx | Test: 87xx | Staging: 98xx
-GRAFANA_PORT=9700
-LOKI_PORT=9710
+# Ports
+GRAFANA_PORT=3000
+LOKI_PORT=3100
+
+# Authentication
+GRAFANA_ADMIN_PASSWORD=changeme
 
 # Memory Configuration (Realistic for 16-32GB systems)
 # Monitoring stack uses moderate memory
