--- a/memgraph/.env.example
+++ b/memgraph/.env.example
@@ -5,12 +5,10 @@
 MEMGRAPH_USER=memgraph
 MEMGRAPH_PASSWORD=changeme
 
-# Ports (85xx range for Memgraph)
-# To change environment (dev/test/staging), modify first 2 digits:
-# Dev: 85xx | Test: 75xx | Staging: 95xx
-MEMGRAPH_LOG_PORT=8544
-MEMGRAPH_BOLT_PORT=8587
-MEMGRAPH_LAB_PORT=8550
+# Ports
+MEMGRAPH_LOG_PORT=7444
+MEMGRAPH_BOLT_PORT=7687
+MEMGRAPH_LAB_PORT=3000
 
 # Memory Configuration (Realistic for 16-32GB systems)
 MEMGRAPH_MEMORY_LIMIT=1g
