--- a/mysql/.env.example
+++ b/mysql/.env.example
@@ -7,11 +7,9 @@ MYSQL_USER=user
 MYSQL_PASSWORD=changeme
 MYSQL_ROOT_PASSWORD=changeme
 
-# Ports (83xx range for MySQL, 88xx for admin tools)
-# To change environment (dev/test/staging), modify first 2 digits:
-# Dev: 83xx/88xx | Test: 73xx/78xx | Staging: 93xx/98xx
-MYSQL_PORT=8306
-ADMINER_PORT=8880
+# Ports
+MYSQL_PORT=3306
+ADMINER_PORT=8080
 
 # Memory Configuration (Realistic for 16-32GB systems)
 MYSQL_MEMORY_LIMIT=1g
