--- a/neo4j/.env.example
+++ b/neo4j/.env.example
@@ -4,11 +4,9 @@
 # Authentication
 NEO4J_PASSWORD=changeme
 
-# Ports (84xx range for Neo4j)
-# To change environment (dev/test/staging), modify first 2 digits:
-# Dev: 84xx | Test: 74xx | Staging: 94xx
-NEO4J_HTTP_PORT=8474
-NEO4J_BOLT_PORT=8487
+# Ports
+NEO4J_HTTP_PORT=7474
+NEO4J_BOLT_PORT=7687
 
 # Memory Configuration (Realistic for 16-32GB systems)
 # Heap: Java application memory
