--- a/qdrant/.env.example
+++ b/qdrant/.env.example
@@ -1,11 +1,9 @@
 # Qdrant Vector Database Configuration
 # Copy this file to .env and customize as needed
 
-# Ports (86xx range for Qdrant)
-# To change environment (dev/test/staging), modify first 2 digits:
-# Dev: 86xx | Test: 76xx | Staging: 96xx
-QDRANT_HTTP_PORT=8633
-QDRANT_GRPC_PORT=8634
+# Ports
+QDRANT_HTTP_PORT=6333
+QDRANT_GRPC_PORT=6334
 
 # Memory Configuration (Realistic for 16-32GB systems)
 # Vector databases need more memory for embeddings
