--- a/memgraph/docker-compose.yml
+++ b/memgraph/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     restart: unless-stopped
     container_name: memgraph-db
     ports:
-      - "${MEMGRAPH_LOG_PORT:-8544}:7444"  # Log streaming/HTTP API
-      - "${MEMGRAPH_BOLT_PORT:-8587}:7687"  # Bolt protocol
+      - "${MEMGRAPH_LOG_PORT:-7444}:7444"  # Log streaming/HTTP API
+      - "${MEMGRAPH_BOLT_PORT:-7687}:7687"  # Bolt protocol
     networks:
       - memgraph-network
     volumes:
@@ -31,24 +31,19 @@ services:
         max-size: "10m"
         max-file: "3"
     labels:
-      - "com.docker.compose.project=${COMPOSE_PROJECT_NAME:-memgraph-db}"
       - "environment=${ENVIRONMENT:-dev}"
       - "service.type=database"
       - "service.name=memgraph"
-      - "service.version=latest"
       - "database.type=graph"
       - "database.engine=memgraph"
-      - "backup.frequency=daily"
-      - "backup.priority=critical"
+      - "container.group=databases"
       - "monitoring.enabled=true"
-      - "team.owner=${TEAM:-platform}"
-      - "expose.ports=8244,8287"
 
   memgraph-lab:
     image: memgraph/lab:latest
     container_name: memgraph-lab
     ports:
-      - "${MEMGRAPH_LAB_PORT:-8550}:3000"
+      - "${MEMGRAPH_LAB_PORT:-3000}:3000"
     networks:
       - memgraph-network
     environment:
@@ -68,16 +63,13 @@ services:
         max-size: "10m"
         max-file: "3"
     labels:
-      - "com.docker.compose.project=${COMPOSE_PROJECT_NAME:-memgraph-db}"
       - "environment=${ENVIRONMENT:-dev}"
       - "service.type=ui"
       - "service.name=memgraph-lab"
-      - "service.version=latest"
       - "ui.for=memgraph"
       - "ui.type=web"
+      - "container.group=admin-tools"
       - "monitoring.enabled=true"
-      - "team.owner=${TEAM:-platform}"
-      - "expose.ports=8250"
 
 volumes:
   memgraph-db-data:
