--- a/grafana-loki/docker-compose.yml
+++ b/grafana-loki/docker-compose.yml
@@ -72,6 +72,8 @@ services:
             relabel_configs:
               - source_labels: ['__meta_docker_container_label_com_docker_compose_service']
                 target_label: 'service_name'
+              - source_labels: ['__meta_docker_container_label_com_docker_compose_project']
+                target_label: 'compose_project'
               - source_labels: ['__meta_docker_container_label_environment']
                 target_label: 'environment'
               - source_labels: ['__meta_docker_container_label_service_type']
@@ -85,6 +87,10 @@ services:
               - source_labels: ['__meta_docker_container_name']
                 regex: '/(.*)'
                 target_label: 'container_name'
+              - source_labels: ['__meta_docker_container_id']
+                target_label: 'instance'
+              - source_labels: ['__meta_docker_container_image']
+                target_label: 'image'
             pipeline_stages:
               - docker: {}
         EOF
@@ -151,11 +157,12 @@ services:
           orgId: 1
           folder: ''
           type: file
-          disableDeletion: false
-          updateIntervalSeconds: 10
-          allowUiUpdates: true
+          disableDeletion: true
+          updateIntervalSeconds: 5
+          allowUiUpdates: false
           options:
             path: /var/lib/grafana/dashboards
+            foldersFromFilesStructure: false
         EOF
         /run.sh
     ports:
