Add Grafana dashboard configurations and enhance Loki setup
- Introduced a new custom mode for Grafana dashboard creation, focusing on Docker container monitoring.
- Added an auto-discovery dashboard for visualizing active containers and their metrics.
- Created an enhanced Qdrant dashboard with detailed metrics and logs for vector database operations.
- Updated the system overview dashboard to improve service name visibility in the top services bar gauge.
- Modified the Docker Compose configuration for Loki to include environment variables for sample rejection settings and command adjustments for configuration.

--- a/grafana-loki/docker-compose.yml
+++ b/grafana-loki/docker-compose.yml
@@ -15,6 +15,10 @@ services:
       - "${LOKI_PORT:-7100}:3100"
     volumes:
       - grafana-loki-data:/loki
+    command: -config.file=/etc/loki/local-config.yaml -config.expand-env=true
+    environment:
+      - LOKI_REJECT_OLD_SAMPLES=false
+      - LOKI_REJECT_OLD_SAMPLES_MAX_AGE=168h
     networks:
       - grafana-loki-network
     healthcheck:
